# persona-message

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  skills.md
scripts/: attach-harnesses  attach-pty-demo  attach-pty-harnesses  attach-pty-pi  debug-pty-pi-router-relay-state  debug-wezterm-claude-ready  harness-common  message-cli-accepts-one-nota-record-and-prints-one-nota-reply  message-component-cannot-own-local-ledger  message-proxy-cannot-own-local-ledger  message-runtime-cannot-reference-retired-terminal-brand  persona-message-daemon-reads-no-control-plane-environment-variables  pty-send  retired-terminal-workflow  setup-harnesses  setup-harnesses-headless  setup-harnesses-visible  setup-pty-demo  setup-pty-harnesses  setup-pty-pi  teardown-harnesses  teardown-pty-demo  teardown-pty-harnesses  teardown-pty-pi  teardown-pty-pi-guarded-delivery  teardown-pty-pi-message  teardown-pty-pi-router-delivery  teardown-pty-pi-router-relay  test-actual-claude-to-codex  test-actual-codex-to-claude  test-actual-harness  test-basic  test-pty-pi-guarded-delivery  test-pty-pi-message  test-pty-pi-niri-focus  test-pty-pi-router-delivery  test-pty-pi-router-relay  test-running-harnesses  view-harnesses
skills/: persona-message-harness.md
src/: command.rs  daemon.rs  delivery.rs  error.rs  lib.rs  main.rs  output_validator.rs  resolver.rs  router.rs  schema.rs  store.rs  supervision.rs  surface.rs
src/actors/: ledger.rs  message_store.rs
tests/: actor_discipline_truth.rs  actor_runtime_truth.rs  actual_harness.rs  daemon.rs  message.rs  two_process.rs
