[package]
name         = "persona-message"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona-message"
description  = "Persona NOTA message CLI and prototype ledger."

[lib]
name = "persona_message"
path = "src/lib.rs"

[[bin]]
name = "message"
path = "src/main.rs"

[[bin]]
name = "message-daemon"
path = "src/bin/message-daemon.rs"

[dependencies]
kameo           = { version = "0.20", default-features = false, features = ["macros", "tracing"] }
nota-codec      = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv            = "0.8"
signal-core     = { git = "https://github.com/LiGoldragon/signal-core.git" }
signal-persona-message = { git = "https://github.com/LiGoldragon/signal-persona-message.git" }
thiserror       = "2"
tokio           = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unused = "warn"
dead_code = "warn"
