[package]
name         = "persona-message"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona-message"
description  = "Persona NOTA message CLI and supervised message ingress daemon."

[lib]
name = "persona_message"
path = "src/lib.rs"

[[bin]]
name = "message"
path = "src/main.rs"

[[bin]]
name = "persona-message-daemon"
path = "src/bin/persona_message_daemon.rs"

[[bin]]
name = "message-validate-output"
path = "src/bin/message_validate_output.rs"

[dependencies]
kameo           = { git = "https://github.com/LiGoldragon/kameo", branch = "persona-lifecycle-terminal-outcome", default-features = false, features = ["macros"] }
libc            = "0.2"
nota-codec      = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
nota-config     = { git = "https://github.com/LiGoldragon/nota-config.git", branch = "main" }
rkyv            = "0.8"
signal-core     = { git = "https://github.com/LiGoldragon/signal-core.git" }
signal-persona  = { git = "https://github.com/LiGoldragon/signal-persona.git" }
signal-persona-auth = { git = "https://github.com/LiGoldragon/signal-persona-auth.git" }
signal-persona-message = { git = "https://github.com/LiGoldragon/signal-persona-message.git" }
thiserror       = "2"
tokio           = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unused = "warn"
dead_code = "warn"
